# openrouter-model-db

./: .gitignore  .mcp.json  CLAUDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-03-26-openrouter-model-db.md  2026-03-27-public-explorer.md
docs/superpowers/specs/: 2026-03-26-openrouter-model-db-design.md  2026-03-27-public-explorer-design.md
queries/: examples.sql
scraper/: api.py  benchmarks.py  db.py  main.py  parquet.py  rsc.py  transform.py
site/: app.js  build.sh  db.js  facets.js  index.html  package-lock.json  package.json  sql-tab.js  style.css  table.js  vite.config.js
site/src/: App.svelte  app.css
site/src/components/: BooleanFacet.svelte  CheckboxFacet.svelte  DataTable.svelte  DualRangeSlider.svelte  ModalityFacet.svelte  RangeFacet.svelte  Sidebar.svelte  SqlTab.svelte  ThemeIcon.svelte
site/src/lib/: db.js  facets.js  i18n.svelte.js  theme.svelte.js
site/src/lib/locales/: ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  th.json  tr.json  uk.json  vi.json  zh.json
superset/: superset-init.sh
tests/: conftest.py  test_benchmarks.py  test_parquet.py  test_rsc.py  test_transform.py
