[project]
name = "openrouter-model-db"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.1",
    "httpx>=0.27",
    "pyarrow>=18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "superset-mcp>=0.6.0",
]

[project.scripts]
scrape = "scraper.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]
